# AdvertisementAPI

./: .env  .env_example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
docker/: app.sh  celery.sh
migrations/: env.py
src/: config.py  db.py  logger.py  main.py  tasks_celery.py
src/admin/: auth_backend.py
src/advertisement/: admin.py  models.py  router.py  schemas.py  service.py
src/auth/: base_config.py  manager.py  router.py  service.py
src/fixtures/: loader.py
src/fixtures/data/: advertisements.csv
src/mail/: mail.py  tasks.py  utils.py
src/tests/: conftest.py
src/tests/api/: test_advertisment.py  test_auth.py
src/user/: admin.py  models.py  schemas.py  service.py  tasks.py
