[tool.poetry]
name = "advertismentapi"
version = "0.1.0"
description = ""
authors = ["AurunChill <aurunchill@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.2"
pytest = "^8.3.2"
fastapi = {extras = ["all"], version = "^0.111.1"}
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
sqladmin = "^0.18.0"
asyncpg = "^0.29.0"
fastapi-mail = "^1.4.1"
celery = "^5.4.0"
gunicorn = "^22.0.0"
pytest-asyncio = "^0.23.8"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"